# target_cpu = "arm" | "arm64" | "x86"

android_unstripped_runtime_outputs = false
is_component_build = false
is_debug = false
symbol_level = 1
target_cpu = "arm64"
target_os = "android"
use_goma = false
v8_target_cpu = "arm64"
v8_use_external_startup_data = false
v8_enable_i18n_support= false
v8_android_log_stdout = true
v8_static_library = true
v8_monolithic = true
