# set to arm, arm64, x86, x64
target_cpu = ""
v8_target_cpu = ""

android_unstripped_runtime_outputs = false
is_component_build = false
is_debug = false
symbol_level = 1
target_os = "android"
use_goma = false
use_custom_libcxx = false
use_custom_libcxx_for_host = false
v8_use_external_startup_data = false
v8_enable_i18n_support= false
v8_android_log_stdout = true
v8_static_library = true
v8_monolithic = true
v8_enable_pointer_compression = false

